css/main.css
@-moz-viewport {widthL device-width; scale: 1; }
@-ms-viewport {widthL device-width; scale: 1; }
@-o-viewport {widthL device-width; scale: 1; }
@-webkit-viewport {widthL device-width; scale: 1; }
@viewport {widthL device-width; scale: 1; }

html{
  box-sizing: border-box;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;

  font-family: 'Raleway', sans-serif;
}

*, *::before, *::after {
  box-sizing: inherit;
}

.content {
  margin: 0 auto;
  max-width: 900px;
}

.list-group__item{
  display: inline-block;
  border: solid #e9dcca;
  border-width: 0 2px 0 2px;
  padding: .25em;
  margin: 0;
}

.nav{
  text-align: center;
}

.nav a{
    color: #e9dcca;
    text-decoration: none;
}

.nav a:hover{
  color: #ef6f65;
}

.masthead{
  background-color: #026565;
  padding: 0;
}

h2{
  color: #ef6f65;
}

.bubble-text{
  position: absolute;
  text-shadow: 1px 1px 5px #e9dcca;
  font-size: 1.5rem;
  color: #031535;
}

.alp{
  position: static;
}

.teal{
  background-color: #026565;
  color: #fff;
}

.beige{
  background-color: #e9dcca;
}

.pink{
  background-color: #f0675f;
}

footer{
  background-color: #031535;
  color: #fff;
}

.skip-links{
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.skip-links a{
  position: absolute;
  top: -3em;
}

.skip-links a:focus{
  top: 0;
}

label{
  display: block;
}

form div{
  margin-bottom: 1.5rem;
}

input, select, textarea{
  font-size: 1.125rem;
  width: 15em;
}

button{
  font-size: 1.125rem;
  padding: 0.5em 0.75em;
  background-color: #026565;
  color: #fff;
  cursor: pointer;
  border: 0px;
  border-radius: 10px;
}

input, textarea {
  border: 1px solid #ccc;
  padding: 0.3em;
}

@media only screen and (min-width: 50em) {

  .nav {
    text-align: right;
  }

  .logo {
    max-width: 256px;
    margin: 0 auto;
  }

  .social{
    max-width: 256px;
    margin: 0 auto;
  }

}

